--- a/index.html
+++ b/index.html
@@ -14,43 +14,43 @@
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <!-- CUstom CSS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <!-- Classes on body set to work with mt-auto on footer to ensure it always stays at the bottom of the page -->
 <body class="d-flex flex-column min-vh-100">
-    <!-- navigation -->
+    <!-- Navigation -->
     <div>Navigation</div>
 
     <!-- Header with carousel -->
      <header class="container">
         <div class="row">
-            <div class="col-12 col-xl-6">Bordwalk gamws intro text swction</div>
+            <div class="col-12 col-xl-6">Boardwalk games intro text section</div>
             <div class="col-12 col-xl-6">Carousel</div>
         </div>
      </header>
 
      <!-- main element to hold all key sections of the home page. It is not part of the grid structure -->
       <main>
-        <!-- Service section -->
+        <!-- Services section -->
         <section class="container">
             <div class="row">
-                <div class="col-12">Services sectin heading</div>
-                <div class="col-12 col-md-6 col-xl-3">Service card</div>
-                <div class="col-12 col-md-6 col-xl-3">Service card</div>
-                <div class="col-12 col-md-6 col-xl-3">Service card</div>
-                <div class="col-12 col-md-6 col-xl-3">Service card</div>
+                <div class="col-12">Services section heading</div>
+                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+                <div class="col-12 col-md-6 col-xl-3">Services card</div>
+                <div class="col-12 col-md-6 col-xl-3">Services card</div>
             </div>
         </section>
       </main>
 
-      <!-- Footer /contact section -->
+      <!-- Footer / contact section -->
        <!-- mt-auto added to push footer to the bottom of the page -->
       <footer class="mt-auto">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12">Contact section heading</div>
-                <!-- contact info-->
+                <!-- Contact info-->
                 <div class="col-12 col-md-6 col-xl-4">Contact info & social links</div>
                 <!-- Opening times -->
                 <div class="col-12 col-md-6 col-xl-4">Opening times</div>
