--- a/booking.html
+++ b/booking.html
@@ -45,95 +45,140 @@
   <body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
     <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo-sm-white.png" alt="Boardwalk Games logo" class="logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="game-library.html">Games</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="booking.html" class="btn btn-primary ms-lg-3" aria-current="page">Book now</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="assets/images/logo-sm-white.png"
+            alt="Boardwalk Games logo"
+            class="logo"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="game-library.html">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a
+                href="booking.html"
+                class="btn btn-primary ms-lg-3"
+                aria-current="page"
+                >Book now</a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
-       <!-- header section -->
+    <!-- header section -->
     <header id="header" class="container section">
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-8 text-center text-xl-start">
-                <h1 class="display-3">Boardwalk Games</h1>
-                <p class="my-4">
-                    Thank you for choosing to reserve a spot at Boardwalk Games! Please
-                    fill out the form below with your details and preferred event. A
-                    member of our team will call you back as soon as possible to confirm
-                    your booking and answer any questions you may have.
-                </p>
-            </div>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-8 text-center text-xl-start">
+          <h1 class="display-3">Boardwalk Games</h1>
+          <p class="my-4">
+            Thank you for choosing to reserve a spot at Boardwalk Games! Please
+            fill out the form below with your details and preferred event. A
+            member of our team will call you back as soon as possible to confirm
+            your booking and answer any questions you may have.
+          </p>
         </div>
+      </div>
     </header>
 
     <main>
-        <!-- Booking inquiry form section -->
-        <section id="booking-form" class="container section">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-8">
-                    <h2>Booking inquiry</h2>
-                    <form>
-                        <div class="row">
-                            <div class="col-12 col-lg-6 mb-3">
-                                <label for="name" class="form-label">Name</label>
-                                <input class="form-control" id="name" name="name" type="text" required>
-                            </div>
-                            <div class="col-12 col-lg-6 mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input class="form-control" id="email" name="email" type="email" required>
-                            </div>
-                            <div class="col-12 col-lg-6 mb-3">
-                                <label for="phone" class="form-label">Phone number</label>
-                                <input class="form-control" id="phone" name="phone" type="number" required>
-                            </div>
-                            <div class="col-12 col-lg-6 mb-3">
-                                <label for="event-type" class="form-label">Event type</label>
-                                <select id="event-type" class="form-select" name="event-type" required>
-                                    <option value="" selected>Select</option>
-                                    <option value="regular-play">Reserve a table</option>
-                                    <option value="dnd">Dungeons & Dragons</option>
-                                    <option value="retro-night">Retro Game Night</option>
-                                    <option value="tournament">Tournament</option>
-                                    <option value="kids-party">Kids party</option>
-                                </select>
-                            </div>
-                            <div class="col-12 mb-3">
-                                <label for="message" class="form-label">Message</label>
-                                <textarea class="form-control" rows="6" id="message" name="message" required></textarea>
-                            </div>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+      <!-- Booking inquiry form section -->
+      <section id="booking-form" class="container section">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-8">
+            <h2>Booking inquiry</h2>
+            <form action="success.html" method="GET">
+              <div class="row">
+                <div class="col-12 col-lg-6 mb-3">
+                  <label for="name" class="form-label">Name</label>
+                  <input
+                    class="form-control"
+                    id="name"
+                    name="name"
+                    type="text"
+                    required
+                  />
                 </div>
-            </div>
-        </section>
+                <div class="col-12 col-lg-6 mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input
+                    class="form-control"
+                    id="email"
+                    name="email"
+                    type="email"
+                    required
+                  />
+                </div>
+                <div class="col-12 col-lg-6 mb-3">
+                  <label for="phone" class="form-label">Phone number</label>
+                  <input
+                    class="form-control"
+                    id="phone"
+                    name="phone"
+                    type="number"
+                    required
+                  />
+                </div>
+                <div class="col-12 col-lg-6 mb-3">
+                  <label for="event-type" class="form-label">Event type</label>
+                  <select
+                    id="event-type"
+                    class="form-select"
+                    name="event-type"
+                    required
+                  >
+                    <option value="" selected>Select</option>
+                    <option value="regular-play">Reserve a table</option>
+                    <option value="dnd">Dungeons & Dragons</option>
+                    <option value="retro-night">Retro Game Night</option>
+                    <option value="tournament">Tournament</option>
+                    <option value="kids-party">Kids party</option>
+                  </select>
+                </div>
+                <div class="col-12 mb-3">
+                  <label for="message" class="form-label">Message</label>
+                  <textarea
+                    class="form-control"
+                    rows="6"
+                    id="message"
+                    name="message"
+                    required
+                  ></textarea>
+                </div>
+              </div>
+
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
-    
+
     <!-- footer / contact section -->
     <!-- mt-auto added to push footer to the bottom of the page -->
     <footer id="contact" class="mt-auto">
