--- a/game-library.html
+++ b/game-library.html
@@ -351,8 +351,8 @@
       </section>
       <section id="booking-form" class="container section">
         <div class="row justify-content-center">
-          <div class="col-12 col-md-8 text-center">
-            <h2>Reserve a game</h2>
+          <div class="col-12 col-md-8 text-start">
+            <h2 class="text-center">Reserve a game</h2>
             <p>
               Reserve a board game for your next visit to Boardwalk Games. Pick
               your challenge, and let the adventure begin! Fill out your details
