--- a/game-library.html
+++ b/game-library.html
@@ -43,8 +43,10 @@
     ensure it always stays at the bottom of the page -->
 
   <body class="d-flex flex-column min-vh-100">
+    
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark">
+    
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img
@@ -352,6 +354,7 @@
       <section id="booking-form" class="container section">
         <div class="row justify-content-center">
           <div class="col-12 col-md-8 text-start">
+            <!-- Use Bootstrap’s "text-center" utility to center this form title -->
             <h2 class="text-center">Reserve a game</h2>
             <p>
               Reserve a board game for your next visit to Boardwalk Games. Pick
